tests/errors/unknown_use_module.drast
// # TEST: unknown module use is rejected
// # EXPECT: error
// # ERROR_CONTAINS: module not found

use definitely_missing_module

main, int
	return 0
